# finance_traffic

./: .env  .gitignore  README.md  pyproject.toml  test.py
app/: container.py
app/adapters/storage/: analyzes.py  contacts.py  news.py  pages.py  promotions.py  services.py  specialists.py
app/adapters/storage/db/: session.py
app/adapters/storage/models/: __init__.py  analyzes.py  callbacks.py  contacts.py  news.py  pages.py  promotions.py  services.py  specialists.py  users.py
app/adapters/telegram/: factory.py
app/api/: factory.py  handlers.py
app/api/admin/: factory.py
app/api/admin/routers/: analyzes.py  contacts.py  services.py  specialists.py
app/api/routers/: telegram.py
app/services/schemas/: analyzes.py  contacts.py  news.py  promotions.py  specialists.py
app/settings/: uvicorn.py
app/templates/: analysis.html  analyzes.html  contacts.html  news.html  news_item.html  promotion.html  promotions.html  services.html  specialist.html  specialists.html
cli/: migrations.py
migrations/: env.py
migrations/versions/: 2022_10_17_1256-74b3c392d767_init.py  2022_10_17_1300-3b383c106c61_renamed_message_in_callbacks.py  2022_10_18_1305-a253537e2498_modified_page_model.py
utils/: constants.py
